# matrix-synapse-security

./: .gitignore
u32-synapse-registration/: .gitignore  Cargo.toml  release.bash
u32-synapse-registration/src/: app.rs  controller.rs  dto.rs  lib.rs  main.rs  view.rs
u32-synapse-registration/static/: 500.html  index.html
u32-synapse-registration/static/css/: bootstap.min.css
u32-synapse-registration/templates/: error.html  index.html  pass_mismatch.liquid
