[package]
name = "u32-synapse-registration"
version = "0.1.0"
authors = ["james.meyer"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-rt = "1"
serde = "1"
serde_json = "1"
askama = { version = "*", features = ["with-actix-web"] }
askama_actix = "0.11.1"