[package]
name = "u32-synapse-registration"
version = "0.1.0"
authors = ["james.meyer"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "2"
simple_logger = "1"
log = "0.4"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
actix-web = { version = "3", features = ["openssl"] }
actix-rt = "1"
serde = "1"
serde_json = "1"
askama = { version = "*", features = ["with-actix-web"] }
askama_actix = "0.11"
lombok = "0.3"
derive_more = "0.99.16"